Spacing corrections

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -115,13 +115,14 @@ footer {
 }
 
 .content {
-    margin-top: 10px;
-    margin-bottom: 10px;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 .section-title {
     text-align: center;
     padding-bottom: 10px;
+    padding-top: 10px;
 }
 
 h3 {
@@ -132,6 +133,8 @@ h3 {
 
 .genres {
     border-left: 4px solid #437479;
+    padding-bottom: 10px;
+    padding-top: 0px;
 }
 
 .genre-list {
@@ -164,10 +167,10 @@ h3 {
 
 .books {
     margin-left: 100px;
-    margin-top: 10px;
-    margin-bottom: 15px;
+    padding-top: 10px;
+    margin-top: 20px;
     border-top: 4px solid #437479;
-    padding-bottom: 20px;
+    padding-bottom: 0px;
 }
 
 .book_info {
